first religion commit

--- a/localization/english/religion/religion_hellenism_l_english.yml
+++ b/localization/english/religion/religion_hellenism_l_english.yml
@@ -3,7 +3,8 @@
  hellenism_religion_adj: "Hellenic"
  hellenism_religion_adherent_plural: "Hellenists"
  hellenism_religion_desc: "Hellenists worship the Greek gods, said to reside on Mount Olympus. Each god has their own aspects and is venerated by their worshipers in their own way."
- hellenic_religion_family: "Hellenic Religions"
+ rf_hellenic: "Hellenic Religions"
+ rf_hellenic_desc: "Hellenists worship the Greek gods, said to reside on Mount Olympus. Each god has their own aspects and is venerated by their worshipers in their own way."
  h_hellenic: "Hellenism"
  h_hellenic_adj: "Hellenic"
  h_hellenic_adherent: "Hellenist"
