finished iberian religions + roman adjustments

--- a/localization/english/religion/religion_hellenism_l_english.yml
+++ b/localization/english/religion/religion_hellenism_l_english.yml
@@ -32,3 +32,35 @@
  r_hellenic_old_adj: "Old Roman Hellenic"
  r_hellenic_old_adherent: "Old Hellenist"
  r_hellenic_old_adherent_plural: "Old Hellenists" 
+
+ hellenism_household_god_name: "Hesta"
+ hellenism_household_god_name_possessive: "Hesta's"
+
+ #Roman Dieties Localization
+ roman_high_god_name: "Jupiter"
+ roman_high_god_name_possessive: "Jupiter's"
+ roman_health_god_name: "Salus"
+ roman_health_god_name_possessive: "Salus'"
+ roman_fertility_god_name: "Ceres"
+ roman_fertility_god_name_possessive: "Ceres'"
+ roman_wealth_god_name: "Pluto"
+ roman_wealth_god_name_possessive: "Pluto's"
+ roman_household_god_name: "Vesta"
+ roman_household_god_name_possessive: "Vesta's"
+ roman_fate_god_name: "The Parcae"
+ roman_fate_god_name_possessive: "The Parcae's"
+ roman_knowledge_god_name: "Minerva"
+ roman_knowledge_god_name_possessive: "Minerva's"
+ roman_war_god_name: "Mars"
+ roman_war_god_name_possessive: "Mars'"
+ roman_trickster_god_name: "Mercury"
+ roman_trickster_god_name_possessive: "Mercury's"
+ roman_water_god_name: "Neptune"
+ roman_water_god_name_possessive: "Neptune's"
+ roman_good_god_diana: "Diana"
+ roman_good_god_venus: "Venus"
+ roman_evlig_god_furiae: "The Furiae"
+ roman_death_deity_name: "Dis Pater"
+ roman_death_deity_name_possessive: "Dis Pater's"
+ roman_death_deity_name_2: "Pluto"
+ roman_death_deity_name_3: "Rex Infernus"
