celti religion + little adjustments

--- a/localization/english/religion/religion_abrahamic_l_english.yml
+++ b/localization/english/religion/religion_abrahamic_l_english.yml
@@ -10,11 +10,11 @@
  rabbinism_desc: "A good life is lived in accordance with the covenant entered between the Hebrew people and the unique and absolute God."
  judaism_religion: "Abrahamic Religions"
  judaism_religion_adj: "Abrahamic"
- christian: "Christianism"
+ christian: "Christianity"
  christian_adj: "Christian"
  christian_adherent: "Christian"
  christian_adherent_plural: "Christians" 
- christian_old: "Old Christianism"
+ christian_old: "Old Christianity"
  christian_old_adj: "Old Christian"
  christian_old_adherent: "Old Christian"
  christian_old_adherent_plural: "Old Christians" 
