germanic and steppe religions

--- a/localization/english/religion/religion_iberian_l_english.yml
+++ b/localization/english/religion/religion_iberian_l_english.yml
@@ -71,8 +71,8 @@
  iberian_religious_symbol_2: "The Horse"
  iberian_religious_symbol_3: "The Centaur"
  iberian_religious_text: "Chronicles of the Sacred Sun" #fictional
- iberian_religious_head_title: "High Priest"
- iberian_religious_head_title_name: "Soluzar" #fictional
+ iberian_religious_head_title: "Soluzar" #fictional
+ iberian_religious_head_title_name: "High Priests" #fictional
  iberian_priest_male: "Luminiz" #fictional
  iberian_priest_male_plural: "Luminizes" #fictional
  iberian_priest_female: "Luminara" #fictional
