amazaghism + little adjustments

--- a/localization/english/religion/religion_celtic_l_english.yml
+++ b/localization/english/religion/religion_celtic_l_english.yml
@@ -8,17 +8,29 @@
  druidism_adj: "Druidistic"
  druidism_adherent: "Druidist" 
  druidism_adherent_plural: "Druidists"
- druidism_desc: "The $druidism_adj$ religion was a polytheistic and nature-focused faith practiced by the Celts in mainland Europe. Distinctly, it was heavily influenced by interactions with neighboring cultures like the Romans and Greeks." 
+ druidism_desc: "The $druidism_adj$ religion was a polytheistic and nature-focused faith practiced by the Celts in mainland Europe. Distinctly, it was heavily influenced by interactions with neighboring cultures like the Romans and Greeks."
+ druidism_old: "Old Druidism"
+ druidism_old_adj: "Old Druidistic"
+ druidism_old_adherent: "Old Druidist"
+ druidism_old_adherent_plural: "Old Druidists"
  brythonnic_druidism: "Brythonnic Druidism"
  brythonnic_druidism_adj: "Brythonnic $druidism_adj$"
  brythonnic_druidism_adherent: "$druidism_adherent$"
  brythonnic_druidism_adherent_plural: "$druidism_adherent$"
  brythonnic_druidism_desc: "The $brythonnic_druidism_adj$ religion, practiced by the ancient Britons, was a polytheistic faith with a strong emphasis on nature worship, sacred groves, and Druidic rituals. It was distinct for its integration of local myths and legends, such as those in the Mabinogion."
+ brythonnic_druidism_old: "Old Brythonnic Druidism"
+ brythonnic_druidism_old_adj: "Old Brythonnic $druidism_adj$"
+ brythonnic_druidism_old_adherent: "Old $druidism_adherent$"
+ brythonnic_druidism_adherent_old_plural: "Old $druidism_adherent$"
  irish_druidism: "Irish Druidism"
  irish_druidism_adj: "Irish $druidism_adj$"
  irish_druidism_adherent: "$druidism_adherent$"
  irish_druidism_adherent_plural: "$druidism_adherent$"
  irish_druidism_desc: "The $irish_druidism_adj$ religion was a polytheistic faith focused on nature worship and a rich pantheon of gods and goddesses like Dagda and Brigid. Druids played a central role in rituals and oral traditions, distinct for its unique myths and legends, such as those of Cú Chulainn and the Táin Bó Cúailnge."
+ irish_druidism_old: "Old Irish Druidism"
+ irish_druidism_old_adj: "Old Irish $druidism_adj$"
+ irish_druidism_old_adherent: "Old $druidism_adherent$"
+ irish_druidism_old_adherent_plural: "Old $druidism_adherent$"
 
  #Dieties
  celtic_high_god_name: "Lugh"
