--- a/localization/english/religion/religion_iberian_l_english.yml
+++ b/localization/english/religion/religion_iberian_l_english.yml
@@ -12,16 +12,28 @@
  i_iberian_adherant: "Iberio"
  i_iberian_adherent_plural: "Iberios"
  i_iberian_desc: "The Iberian tribes which adopeted this faith were influenced by Greek and Phoenician settlers, resulting in a syncretic religious system."
+ i_iberian_old: "Old Iberianism"
+ i_iberian_old_adj: "Old Iberianistic"
+ i_iberian_old_adherant: "Old Iberio"
+ i_iberian_old_adherent_plural: "Old Iberios"
  tartessian: "Tartessianism"
  tartessian_adj: "Tartessian"
  tartessian_adherent: "Tartessio"
  tartessian_adherent_plural: "Tartessios"
  tartessian_desc: "The Tartessian religion is among the oldest documented in the Iberian Peninsula. It was deeply rooted into the cult of nature, even if it was later infuenced by phoenecian settlers."
+ tartessian_old: "Old Tartessianism"
+ tartessian_old_adj: "Old Tartessian"
+ tartessian_old_adherent: "Old Tartessio"
+ tartessian_old_adherent_plural: "Old Tartessios"
  celtiberianism: "Celtiberianism"
  celtiberianism_adj: "Celtiberian"
  celtiberianism_adherent: "Celtiberio"
  celtiberianism_adherent_plural: "Celtiberios"
  celtiberianism_desc: "A blend of indigenous Iberian and Celtic religious practices, reflecting the syncretic nature of the $celtiberianism_adherent_plural$. Worship of the nature is one of the most important aspects."
+ celtiberianism_old: "Old Celtiberianism"
+ celtiberianism_old_adj: "Old Celtiberian"
+ celtiberianism_old_adherent: "Old Celtiberio"
+ celtiberianism_old_adherent_plural: "Old Celtiberios"
 
  holy_order_of_solisguard: "Order of Solisguard"
  holy_order_guardians_of_terra_mater: "Order of Terra Mater"
