titles small fix

--- a/localization/english/religion/other_religions_l_english.yml
+++ b/localization/english/religion/other_religions_l_english.yml
@@ -18,7 +18,7 @@
  scythian_adj: "Scythian"
  scythian_old: "Old Scythianism"
  scythian_old_adj: "Old Scythian"
- sarmatian_religion_desc: "$sarmatian_religion$ were polytheistic religions who worshipped natural elements, animal deities, and ancestor spirits. Their origins is iranian."
+ sarmatian_religion_desc: "$sarmatian_religion$ were polytheistic religions who worshipped natural elements, animal deities, and ancestor spirits. Their origins are iranian."
 
  rf_african: "African"
  rf_african_adj: "African"
