--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -9952,7 +9952,6 @@
  b_tkhabayerdy: "Tkhaba-Yerdy"
  b_tlemcen: "Tlemcen"
  b_tlilin: "Tlilin"
- b_tmutarakan: "Tmutarakan"
  b_tobarra: "Tobarra"
  b_tobol: "Tobol"
  b_tobolsk: "Tobolsk"
@@ -14165,8 +14164,6 @@
  c_tjust_adj: "Tjusti"
  c_tlemcen: "Tlemcen"
  c_tlemcen_adj: "Tlemcenian"
- c_tmutarakan: "Tmutarakan"
- c_tmutarakan_adj: "Tmutarakanian"
  c_tobol: "Tobol"
  c_tobol_adj: "Tobolian"
  c_tobruk: "Tobruk"
@@ -16766,8 +16763,6 @@
  c_golden_hills_adj: "Donsky"
  c_kazanskaya: "Kazanskaya"
  c_kazanskaya_adj: "Kazanskayan"
- c_kerch: "Kerch"
- c_kerch_adj: "Kerchian"
  c_kalos_limen: "Kalos Limen"
  c_kalos_limen_adj: "Kalos Limenian"
  c_perekop:1 "Or Qapi"
@@ -16834,8 +16829,6 @@
  b_boguchar: "Boguchar"
  b_millerovo:1 "South Kazanskaya"
  b_podgornye: "Podgornye"
- b_chersonesus: "Chersonesus"
- b_kerch: "Kerch"
  b_kalos_limen: "Kalos Limen"
  b_dzhankoi:1 "Canköy"
  b_aksay: "Aksay"
@@ -24668,3 +24661,19 @@
  c_derna_adj: "Cyrenian"
  cn_kyrene_et_kreta: "Kyrene et Kreta"
  cn_kyrene_et_kreta_adj: "Kyrenian and Kretan"
+ d_syria: "Syria"
+ d_syria_adj: "Syrian"
+ d_liban: "Liban"
+ d_liban_adj: "Libanese"
+ b_kerch: "Kimmerikon"
+ c_kerch: "Kimmerikon"
+ c_kerch_adj: "Kimmerian"
+ b_tmutarakan: "Herranonassa"
+ c_tmutarakan: "Herranonassa"
+ c_tmutarakan_adj: "Herranonassian"
+ d_airgialla: "Airgialla"
+ d_airgialla_adj: "Airgiallan"
+ d_ulaid: "Ulaid"
+ d_ulaid_adj: "Ulaidian"
+ d_laigin: "Laigin"
+ d_aligin_adj: "Laiginian"
