added zamolxist and tengrii religions

--- a/localization/english/religion/religion_iberian_l_english.yml
+++ b/localization/english/religion/religion_iberian_l_english.yml
@@ -84,7 +84,7 @@
  iberian_religious_symbol_3: "The Centaur"
  iberian_religious_text: "Chronicles of the Sacred Sun" #fictional
  iberian_religious_head_title: "Soluzar" #fictional
- iberian_religious_head_title_name: "High Priests" #fictional
+ iberian_religious_head_title_name: "Soluzariate" #fictional
  iberian_priest_male: "Luminiz" #fictional
  iberian_priest_male_plural: "Luminizes" #fictional
  iberian_priest_female: "Luminara" #fictional
