--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -24225,8 +24225,8 @@
  d_apulia_adj: "Apulian"
  d_calabria: "Lucania"
  d_calabria_adj: "Lucanian"
- d_latium: "Roma"
- d_latium_adj: "Roman"
+ d_latium: "Latium"
+ d_latium_adj: "Latium"
  d_toscana: "Etruria"
  d_toscana_adj: "Etruscan"
  d_spoleto: "Samnium"
