--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -4911,7 +4911,6 @@
  b_kenilworth: "Kenilworth"
  b_kenmore: "Kenmore"
  b_kentau: "Kentau"
- b_kerak: "Kerak"
  b_kerarkot: "Kerarkot"
  b_kerasous: "Kerasous"
  b_kerat: "Kerat"
@@ -6800,7 +6799,6 @@
  b_muravera: "Muravera"
  b_murayfiq: "Murayfiq"
  b_murbach: "Murbach"
- b_murcia: "Murcia"
  b_muret: "Muret"
  b_murghab: "Murghab"
  b_murol: "Murol"
@@ -7988,7 +7986,6 @@
  b_qurayyat: "Qurayyat"
  b_qurman: "Qurman"
  b_qurna: "Qurna"
- b_qus: "Qus"
  b_qusayr: "Qusayr"
  b_qusdar: "Qusdar"
  b_qutaysh: "Qutaysh"
@@ -8109,7 +8106,6 @@
  b_raseborg: "Raasepori"
  b_raseiniai: "Raseiniai"
  b_raselma: "Ras el Ma"
- b_rashid: "Rashid"
  b_rasht: "Rasht"
  b_rasony: "Rasony"
  b_rastatt: "Rastatt"
@@ -9207,7 +9203,6 @@
  b_sordavala: "Sordavala"
  b_sorde: "Sorde"
  b_sorge: "Sorge"
- b_soria: "Soria"
  b_soro: "Soro"
  b_soroca: "Soroca"
  b_soroka: "Soroka"
@@ -11045,7 +11040,6 @@
  b_zanzur: "Zanzur"
  b_zaoula: "Zaoula"
  b_zaporzhye: "Zaporzhye"
- b_zaragoza: "Zaragoza"
  b_zarand:1 "Zaránd"
  b_zaranj: "Zaranj"
  b_zaraysk: "Zaraysk"
@@ -11478,8 +11472,6 @@
  c_auvergne_adj: "Auvergnian"
  c_auxerre: "Auxerre"
  c_auxerre_adj: "Auxerrian"
- c_avalois: "Avalois"
- c_avalois_adj: "Avalois"
  c_aveiro: "Aveiro"
  c_aveiro_adj: "Aveiran"
  c_avhaz: "Avhaz"
@@ -11699,8 +11691,6 @@
  c_braslau_adj: "Braslauer"
  c_braunschweig: "Braunschweig"
  c_braunschweig_adj: "Braunschweigian"
- c_brecknockshire:2 "Brycheiniog"
- c_brecknockshire_adj: "Brycheiniogian"
  c_breda: "Breda"
  c_breda_adj: "Bredian"
  c_bregenz: "Bregenz"
@@ -12658,8 +12648,6 @@
  c_kazakh_adj: "Kazakh"
  c_kemi: "Kemi"
  c_kemi_adj: "Kemian"
- c_kerak: "Kerak"
- c_kerak_adj: "Kerakian"
  c_kerman: "Kerman"
  c_kerman_adj: "Kermian"
  c_kermanshah: "Kermanshah"
@@ -13208,8 +13196,6 @@
  c_munjan: "Munjan"
  c_munster:1 "Münster"
  c_munster_adj:1 "Münsterian"
- c_murcia: "Murcia"
- c_murcia_adj: "Murcian"
  c_murom: "Murom"
  c_murom_adj: "Muromian"
  c_murzzuschlag: "Mürzzuschlag"
@@ -13931,8 +13917,6 @@
  c_sonda_adj: "Sonda"
  c_sopron: "Sopron"
  c_sopron_adj: "Sopronian"
- c_soria: "Soria"
- c_soria_adj: "Sorian"
  c_soroca: "Soroca"
  c_soroca_adj: "Sorocan"
  c_sortavala: "Sortavala"
@@ -14574,8 +14558,6 @@
  c_zaozerye_adj: "Zaozeryian"
  c_zarafshan: "Zarafshan"
  c_zarafshan_adj: "Zarafshani"
- c_zaragoza: "Zaragoza"
- c_zaragoza_adj: "Zaragozan"
  c_zaranj: "Zaranj"
  c_zaranj_adj: "Zaranji"
  c_zarma: "Zarma"
@@ -16508,9 +16490,6 @@
  b_an-nahrawan: "an-Nahrawan"
  b_al-farasa: "al-Farasa"
  b_sarsar: "Sarsar"
- c_iskaf: "Iskaf"
- c_iskaf_adj: "Iskafian"
- b_iskaf: "Iskaf"
  b_jabbul: "Jabbul"
  b_humaniya: "Humaniya"
  c_anbar: "Anbar"
@@ -17406,7 +17385,6 @@
  b_kanais_al-hadid: "Kanais Al-Hadid"
  b_kharga: "Kharga"
  b_manfalut: "Manfalut"
- b_marawa: "Marawa"
  b_minuf: "Minuf"
  b_nastarawa: "Nastarawa"
  b_north_jbl_quzlum: "North Jabal Quzlum"
@@ -17429,8 +17407,6 @@
  b_wadi_masus: "Wadi Masus"
  b_wadi_natrun: "Wadi Natrun"
  b_zarnikh: "Zarnikh"
- c_al-buhaira: "Al-Buhaira"
- c_al-buhaira_adj: "Al-Buhairan"
  c_al-gharbiya: "Al-Gharbiya"
  c_al-gharbiya_adj: "Al-Gharbiyan"
  c_allaqi: "Allaqi"
@@ -17457,8 +17433,6 @@
  c_jabal_quzlum_adj: "Jabal Quzlumian"
  c_kharga: "Kharga"
  c_kharga_adj: "Khargan"
- c_qus: "Qus"
- c_qus_adj: "Qusian"
  c_qusayr: "Qusayr"
  c_qusayr_adj: "Qusayrian"
  c_sharkiya: "Sharkiya"
@@ -17499,8 +17473,6 @@
  d_armeniac_adj: "Armeniac"
  d_sebasteia: "Sebasteia"
  d_sebasteia_adj: "Sebasteian"
- c_nicosia: "Nicosia"
- c_nicosia_adj: "Nicosian"
  c_mysia: "Mysia"
  c_mysia_adj: "Mysian"
  c_phrygia: "Phrygia"
@@ -17569,7 +17541,6 @@
  c_charsianon_adj: "Charsianan"
  c_kyzistra: "Kyzistra"
  c_kyzistra_adj: "Kyzistran"
- b_nicosia: "Nicosia"
  b_limisol: "Limisol"
  b_cerynia: "Cerynia"
  b_apemea: "Apemea"
@@ -18272,8 +18243,6 @@
  c_hewes_adj:1 "Hevian"
  c_hont: "Hont"
  c_hont_adj: "Hontian"
- c_hunyad: "Hunyad"
- c_hunyad_adj: "Hunyadi"
  c_jawf-al-yamani: "Al-Jawf al-Yamani"
  c_jawf-al-yamani_adj: "Al-Jawf al-Yamanian"
  c_jilat: "Jilat"
@@ -24085,8 +24054,8 @@
  d_cyrene_et_creta_adj: "Cyrenian and Cretian"
  d_alexandreia: "Alexandreia"
  d_alexandreia_adj: "Alexandreian"
- d_thebes: "Thebes"
- d_thebes_adj: "Thebian"
+ d_thebes: "Upper Egypt"
+ d_thebes_adj: "Egyptian"
  d_tyrus: "Tyrus"
  d_tyrus_adj: "Tyrian"
  b_phocaea: "Pergamon"
@@ -24677,3 +24646,39 @@
  d_ulaid_adj: "Ulaidian"
  d_laigin: "Laigin"
  d_aligin_adj: "Laiginian"
+ c_murcia: "Carthago Nova"
+ c_murcia_adj: "Carthaginian"
+ b_murcia: "Carthago Nova"
+ b_marawa: "Cyrene"
+ c_soria: "Numantia"
+ c_soria_adj: "Numantian"
+ b_soria: "Numantia"
+ c_zaragoza: "Segeda"
+ c_zaragoza_adj: "Segedian"
+ b_zaragoza: "Segeda"
+ c_iskaf: "Babylon"
+ c_iskaf_adj: "Babylonian"
+ b_iskaf: "Babylon"
+ c_qus: "Luxor"
+ c_qus_adj: "Luxorian"
+ b_qus: "Luxor"
+ cn_thebes: "Thebes"
+ cn_thebes_adj: "Thebian"
+ c_al-buhaira: "Naucratis"
+ c_al-buhaira_adj: "Naucratian"
+ b_rashid: "Naucratis"
+ c_nicosia: "Ledra"
+ c_nicosia_adj: "Ledrian"
+ b_nicosia: "Ledra"
+ c_hunyad: "Sarmizegetusa Regia"
+ c_hunyad_adj: "Sarmizegetusian"
+ b_vajdahunyad: "Sarmizegetusa Regia"
+ c_avalois: "Bibracte"
+ c_avalois_adj: "Bibractian"
+ b_vezelay: "Bibracte"
+ c_brecknockshire: "Mynydd Carn y Cefn"
+ c_brecknockshire_adj: "Mynydd Carnian"
+ b_brecon: "Mynydd Carn y Cefn"
+ c_kerak: "Petra"
+ c_kerak_adj: "Petran"
+ b_kerak: "Petra"
