--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -24648,7 +24648,8 @@
  d_aligin_adj: "Laiginian"
  c_murcia: "Carthago Nova"
  c_murcia_adj: "Carthaginian"
- b_murcia: "Carthago Nova"
+ b_murcia: "Murcia"
+ b_cartagena: "Carthago Nova"
  b_marawa: "Cyrene"
  c_soria: "Numantia"
  c_soria_adj: "Numantian"
