--- a/localization/english/religion/holy_sites_l_english.yml
+++ b/localization/english/religion/holy_sites_l_english.yml
@@ -1,53 +1,54 @@
 ﻿l_english:
- holy_site_carthage_effect_name: "Carthago"
- holy_site_sidon_effect_name: "Sidon"
- holy_site_nova_carthago_effect_name: "Carthago Nova"
- holy_site_karalis_effect_name: "Karalis"
- holy_site_cyrene_effect_name: "Cyrene"
- holy_site_numantia_effect_name: "Numantia"
- holy_site_segeda_effect_name: "Segeda"
- holy_site_tartessos_effect_name: "Tartessos"
- holy_site_osuna_effect_name: "Osuna"
- holy_site_camas_effect_name: "Camas"
- holy_site_gadir_effect_name: "Gadir"
- holy_site_cave_of_the_devil_effect_name: "Cave of the Devil"
- holy_site_contrebia_belaisca_effect_name: "Contrebia Belaisca"
- holy_site_mount_bernorio_effect_name: "Mount Bernorio"
- holy_site_pella_effect_name: "Pella"
- holy_site_babylon_effect_name: "Babylon"
- holy_site_byzantium_effect_name: "Byzantium"
- holy_site_luxor_effect_name: "Luxor"
- holy_site_naucratis_effect_name: "Naucratis"
- holy_site_ledra_effect_name: "Ledra"
- holy_site_tyre_effect_name: "Tyre"
- holy_site_sarmizegetusa_regia_effect_name: "Sarmizegetusa Regia"
- holy_site_delphi_effect_name: "Delphi"
- holy_site_hattusa_effect_name: "Hattusa"
- holy_site_biskupin_effect_name: "Biskupin"
- holy_site_carnutes_grove_effect_name: "Carnute's Groove"
- holy_site_sein_island_effect_name: "Sein Island"
- holy_site_bibracte_effect_name: "Bibracte"
- holy_site_rennes-les-bains_effect_name: "Rennes-les-Bains"
- holy_site_glastonbury_tor_effect_name: "Glastonbury Tor"
- holy_site_ynys_mon_effect_name: "Ynys Môn"
- holy_site_hill_of_tara_effect_name: "Hill of Tara"
- holy_site_bath_effect_name: "Bath"
- holy_site_mynydd_effect_name:  "Mynydd Carn y Cefn"
- holy_site_gobekli_effect_name: "Göbekli Tepe"
- holy_site_petra_effect_name: "Petra"
- holy_site_mount_ararat_effect_name: "Mount Ararat"
- holy_site_preslav_effect_name: "Preslav"
- holy_site_qazvin_effect_name: "Qazvin"
- holy_site_zamwa_effect_name: "Zamwa"
- holy_site_nitra_effect_name: "Nitra"
- holy_site_mallorca_effect_name: "Mallorca"
- holy_site_syracusa_effect_name: "Syracusa"
- holy_site_hallstatt_effect_name: "Hallstatt"
- holy_site_vosges_mountains_effect_name: "Vosges Mountains"
- holy_site_thors_oak_effect_name: "Thor's Oak"
- holy_site_rheinegau_effect_name: "Rheinegau"
- holy_site_scythian_neapolis_effect_name: "Scythian Neapolis"
- holy_site_don_river_effect_name: "Don River"
- holy_site_dobruja_effect_name: "Dobruja"
- holy_site_pannonia_basin_effect_name: "Pannonia Basin"
+ holy_site_carthage_name: "Carthago"
+ holy_site_sidon_name: "Sidon"
+ holy_site_nova_carthago_name: "Carthago Nova"
+ holy_site_karalis_name: "Karalis"
+ holy_site_cyrene_name: "Cyrene"
+ holy_site_numantia_name: "Numantia"
+ holy_site_segeda_name: "Segeda"
+ holy_site_tartessos_name: "Tartessos"
+ holy_site_osuna_name: "Osuna"
+ holy_site_camas_name: "Camas"
+ holy_site_gadir_name: "Gadir"
+ holy_site_cave_of_the_devil_name: "Cave of the Devil"
+ holy_site_contrebia_belaisca_name: "Contrebia Belaisca"
+ holy_site_mount_bernorio_name: "Mount Bernorio"
+ holy_site_pella_name: "Pella"
+ holy_site_babylon_name: "Babylon"
+ holy_site_byzantium_name: "Byzantium"
+ holy_site_luxor_name: "Luxor"
+ holy_site_naucratis_name: "Naucratis"
+ holy_site_ledra_name: "Ledra"
+ holy_site_tyre_name: "Tyre"
+ holy_site_sarmizegetusa_regia_name: "Sarmizegetusa Regia"
+ holy_site_delphi_name: "Delphi"
+ holy_site_hattusa_name: "Hattusa"
+ holy_site_biskupin_name: "Biskupin"
+ holy_site_carnutes_grove_name: "Carnute's Groove"
+ holy_site_sein_island_name: "Sein Island"
+ holy_site_bibracte_name: "Bibracte"
+ holy_site_rennes-les-bains_name: "Rennes-les-Bains"
+ holy_site_glastonbury_tor_name: "Glastonbury Tor"
+ holy_site_ynys_mon_name: "Ynys Môn"
+ holy_site_hill_of_tara_name: "Hill of Tara"
+ holy_site_bath_name: "Bath"
+ holy_site_mynydd_name:  "Mynydd Carn y Cefn"
+ holy_site_gobekli_name: "Göbekli Tepe"
+ holy_site_petra_name: "Petra"
+ holy_site_mount_ararat_name: "Mount Ararat"
+ holy_site_preslav_name: "Preslav"
+ holy_site_qazvin_name: "Qazvin"
+ holy_site_zamwa_name: "Zamwa"
+ holy_site_nitra_name: "Nitra"
+ holy_site_mallorca_name: "Mallorca"
+ holy_site_syracusa_name: "Syracusa"
+ holy_site_hallstatt_name: "Hallstatt"
+ holy_site_vosges_mountains_name: "Vosges Mountains"
+ holy_site_thors_oak_name: "Thor's Oak"
+ holy_site_rheinegau_name: "Rheinegau"
+ holy_site_scythian_neapolis_name: "Scythian Neapolis"
+ holy_site_don_river_name: "Don River"
+ holy_site_dobruja_name: "Dobruja"
+ holy_site_pannonia_basin_name: "Pannonia Basin"
+ holy_site_externsteine_name: "Externsteine"
  
