--- a/localization/english/religion/other_religions_l_english.yml
+++ b/localization/english/religion/other_religions_l_english.yml
@@ -15,8 +15,12 @@
  sarmatian_religion: "Sarmatian Religions"
  sarmatian_religion_adj: "Sarmatian"
  scythian: "Scythianism"
+ scythian_adherent: "Scythianist"
+ scythian_adherent_plural: "Scythianists"
  scythian_adj: "Scythian"
  scythian_old: "Old Scythianism"
+ scythian_adherent: "Old Scythianist"
+ scythian_adherent_plural: "Old Scythianists"
  scythian_old_adj: "Old Scythian"
  sarmatian_religion_desc: "$sarmatian_religion$ were polytheistic religions who worshipped natural elements, animal deities, and ancestor spirits. Their origins are iranian."
 
