some italian history

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -24683,3 +24683,17 @@
  c_kerak: "Petra"
  c_kerak_adj: "Petran"
  b_kerak: "Petra"
+ d_insubres: "Insubri"
+ d_insubres_adj: "Insubrian"
+ d_boii: "Boii"
+ d_boii_adj: "Boiai"
+ d_ligurii: "Ligurii"
+ d_ligurii_adj: "Liguris"
+ d_veneti: "Venetii"
+ d_veneti_adj: "Venetian"
+ d_letobici: "Letobici"
+ d_letobici_adj: "Letobician"
+ d_histri: "Histri"
+ d_histri_adj: "Histrian"
+ d_tauri: "Tauri"
+ d_tauri_adj: "Taurin"
