Tribal government + little fixes

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -24683,14 +24683,14 @@
  c_kerak: "Petra"
  c_kerak_adj: "Petran"
  b_kerak: "Petra"
- d_insubres: "Insubri"
- d_insubres_adj: "Insubrian"
- d_boii: "Boii"
- d_boii_adj: "Boiai"
- d_ligurii: "Ligurii"
- d_ligurii_adj: "Liguris"
- d_veneti: "Venetii"
- d_veneti_adj: "Venetian"
+ cn_insubri: "Insubri"
+ cn_insubri_adj: "Insubrian"
+ cn_boii: "Boii"
+ cn_boii_adj: "Boiai"
+ cn_ligurii: "Ligurii"
+ cn_ligurii_adj: "Liguris"
+ cn_venetii: "Venetii"
+ cn_venetii_adj: "Venetian"
  d_letobici: "Letobici"
  d_letobici_adj: "Letobician"
  d_histri: "Histri"
