little changes but almost lost it all

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -24693,7 +24693,7 @@
  cn_venetii_adj: "Venetian"
  d_letobici: "Letobici"
  d_letobici_adj: "Letobician"
- d_histri: "Histri"
- d_histri_adj: "Histrian"
+ cn_histri: "Histri"
+ cn_histri_adj: "Histrian"
  d_tauri: "Tauri"
  d_tauri_adj: "Taurin"
