--- a/localization/english/culture/culture_eras_l_english.yml
+++ b/localization/english/culture/culture_eras_l_english.yml
@@ -6,10 +6,10 @@
  culture_group_any: "any"
  #ERAS
  culture_era_tribal: "Tribal"
- culture_era_tribal_desc: "The Tribal Era of a [culture|E] predates the emergence of codified laws and an institutionalized government. Rulers with [tribal_government|E] can only make use of Tribal Era [innovations|E]."
+ culture_era_tribal_desc: "The $culture_era_tribal$ Era of a [culture|E] predates the emergence of codified laws and an institutionalized government. Rulers with [tribal_government|E] can only make use of $culture_era_tribal$ Era [innovations|E] and can't hold a title with a tier higher than the duchy tier."
  culture_era_early_medieval: "Hellenistic"
- culture_era_early_medieval_desc: "The Early Medieval Era sees the emergence of professional administrators and a number of important [innovations|E], allowing a [culture|E] to exit the Dark Ages."
+ culture_era_early_medieval_desc: "The $culture_era_early_medieval$ Era started after Alexander the Great's conquest of Persia. It marked a period where the hellenic [culture|E] dominated the world and the greek philosophers were constantly inventing new [innovations|E]."
  culture_era_high_medieval: "Pax Romana"
- culture_era_high_medieval_desc: "The High Medieval Era is a time of great technological and administrative progress, seeing towns grow into cities and the rise of the burgher class even as the aristocracy reigns supreme."
+ culture_era_high_medieval_desc: "The $culture_era_high_medieval$ Era is marked by a time of relative peace and prosperity in Europe, where large Empires dominated thousands of people and the rulers were just and brought new [innovations|E] to their [culture|E]."
  culture_era_late_medieval: "Chaos Romanus"
- culture_era_late_medieval_desc: "The Late Medieval Era marks the zenith of the feudal world. Bureaucrats, artisans, merchants and money lenders are starting to encroach on the power of the old privileged classes, except for the monarchs themselves."
+ culture_era_late_medieval_desc: "The $culture_era_late_medieval$ Era marks the fall of the ancient empires, what was once prosperous and great, it is now falling into pieces, eaten by the chaos of corrupted politicians. The struggle for survival begins here."
