final city-state commit

--- a/localization/english/PAXCity-State_loc_l_english.yml
+++ b/localization/english/PAXCity-State_loc_l_english.yml
@@ -36,12 +36,17 @@
  PAX_CB_REINTEGRATE_IN_LEAGUE_CB_NAME: "Re-Integration in [league|E]"
  PAX_CB_REINTEGRATE_IN_LEAGUE_NAME: "$ORDER$ [TITLE.GetBaseName] Re-Integration into the [ATTACKER.GetPrimaryTitle.GetAdjective] League"
  PAX_CB_REINTEGRATE_IN_LEAGUE_BASE_NAME: "$ORDER$ [ATTACKER.GetPrimaryTitle.GetAdjective] Re-Integration of [DEFENDER.GetPrimaryTitle.GetName]"
+ league_reintegration_cb_victory_desc: "[attacker.GetShortUIName|U] reintegrates the contested [title|E]."
+ league_reintegration_cb_victory_desc_attacker: "You reintegrate the contested [titles|E]."
+ league_reintegration_cb_defeat_desc: "The contested [title|E] can't be reintegrated into the [league|E] anymore."
+ league_reintegration_cb_defeat_desc_attacker: "You can't reintegrate the contested [titles|E] anymore. All [factions|E] against you increase their [discontent|E]."
+ league_reintegration_cb_defeat_desc_defender: "[attacker.GetShortUIName|U] won't be able anymore to try and reintegrate the contested [title|E] into the [league|E]."
 
  #League Modifiers Localization
  took_some_league_funds_opinion: "You took some of the [league|E]'s Funds"
  left_league_opinion: "You left the [league|E]"
  banned_me_from_league_opinion: "Banned me from [league|E]"
- usurped_me_from_league_opinion: "Usurped my [league|E]'s rulership"
+ usurped_me_from_league_opinion: "Usurped my [league|E]'s leadership"
  league_funds: "[league|E]'s Funds"
  league_funds_desc: "This character is taking a part some of his [gold|E] income for the benefits of the [league|E]."
 
@@ -56,3 +61,13 @@
  league_interaction.0002.tooltip: "[actor.GetPrimaryTitle.GetName] entered the [GetPlayer.GetPrimaryTitle.GetAdjectiveNoTooltip] [league|E]."
  league_interaction.0002.a: "[actor.GetSheHe] is going to pay for that!"
  league_interaction.0002.a.tooltip: "You get the $PAX_CB_REINTEGRATE_IN_LEAGUE_CB_NAME$ casus belli"
+ league_interaction.0003: "Banned from the [actor.GetPrimaryTitle.GetAdjective] League"
+ league_interaction.0003.opening: "You got banned from the [actor.GetPrimaryTitle.GetAdjective] League"
+ league_interaction.0003.desc: "I, [actor.GetName], I had to take the hard decision to ban you from the [actor.GetPrimaryTitle.GetAdjective] League.\n Farewell."
+ league_interaction.0003.tooltip: "You got banned from the [actor.GetPrimaryTitle.GetAdjective] League"
+ league_interaction.0003.a: "I'm on my own now."
+ league_interaction.0004: "Change of Leadership"
+ league_interaction.0004.opening: "Change of Leadership"
+ league_interaction.0004.desc: "[recipient.GetName], your Leadership is too weak, the [recipient.GetPrimaryTitle.GetAdjective] League will now change into the [actor.GetPrimaryTitle.GetAdjective] League, as I, [actor.GetName], am the new leader."
+ league_interaction.0004.a: "I guess I don't have much choice"
+ league_interaction.0004.tooltip: "The [recipient.GetPrimaryTitle.GetAdjective] League becomes the [actor.GetPrimaryTitle.GetAdjective] League"
