fixed traditions and religion

--- a/localization/english/religion/religion_hellenism_l_english.yml
+++ b/localization/english/religion/religion_hellenism_l_english.yml
@@ -27,7 +27,7 @@
  r_hellenic_adj: "Roman Hellenic"
  r_hellenic_adherent: "Hellenist"
  r_hellenic_adherent_plural: "Hellenists"
- r_hellenic_desc: "The Romans started adopting greek goods in their own pantheon from the moment they had contact with it. Each god has their own aspects and is venerated by their worshipers in their own way."
+ r_hellenic_desc: "The Romans started adopting greek gods in their own pantheon from the moment they had contact with them. Each god has their own aspects and is venerated by their worshipers in their own way."
  r_hellenic_old: "Old Roman Hellenism"
  r_hellenic_old_adj: "Old Roman Hellenic"
  r_hellenic_old_adherent: "Old Hellenist"
